# air-flow-simulation

./: .clang-format  .gitignore  AirFlow_SPH_v6.pro  CMakeLists.txt  README.md  air-flow-simulation.pro  build.sh  format.sh  test.sh
App/: main.cpp
App/Applied/: constants.h  global_types.h  utils.cpp
App/Applied/Color/: color.h
App/Applied/Commands/: base_command.h
App/Applied/Commands/CameraCommands/: add_camera_command.cpp  add_camera_command.h  camera_command.h  count_cameras_command.cpp  count_cameras_command.h  load_camera_command.cpp  load_camera_command.h  move_camera_command.cpp  move_camera_command.h  remove_camera_command.cpp  remove_camera_command.h  rotate_camera_command.h  set_cur_camera_command.cpp  set_cur_camera_command.h
App/Applied/Commands/LightCommands/: add_light_command.hpp
App/Applied/Commands/ModelCommands/: add_model_command.cpp  add_model_command.h  count_models_command.cpp  count_models_command.h  load_model_command.cpp  load_model_command.h  load_polygonal_model_command.h  model_command.h  move_model_command.cpp  move_model_command.h  remove_model_command.cpp  remove_model_command.h  rotate_model_command.cpp  rotate_model_command.h  scale_model_command.cpp  scale_model_command.h  transform_model_command.cpp  transform_model_command.h
App/Applied/Commands/ParticleSystemCommands/: add_particle_system_command.hpp  remove_particle_system_command.hpp
App/Applied/Commands/SceneCommands/: draw_scene_command.cpp  draw_scene_command.h  get_cur_camera_command.cpp  get_cur_camera_command.h  get_object_command.cpp  get_object_command.h  get_scene_command.cpp  get_scene_command.h  scene_command.h
App/Applied/Containers/Iterator/: vector_const_iterator.h
App/Applied/Containers/Vector/: base_vector.h  vector.hpp
App/Applied/Drawer/: drawer.h  solution_drawer_factory.cpp  solution_drawer_factory.h
App/Applied/Exceptions/: base_exception.h  camera_exceptions.h  load_exceptions.h  model_exceptions.h
App/Applied/Facade/: facade.h
App/Applied/Load/Builders/: object_builder.h
App/Applied/Load/Directors/: base_load_director.h
App/Applied/Load/Loaders/: base_file_loader.h
App/Applied/Managers/: base_manager.h  draw_manager.cpp  draw_manager.h  load_manager.cpp  load_manager.h  main_manager.h  manager_creator.h  scene_manager.cpp  scene_manager.h  transform_manager.cpp  transform_manager.h
App/Applied/Primitives/Edge/: edge.h
App/Applied/Primitives/Face/: face.h
App/Applied/Primitives/Matrix4x4/: matrix_4x4.hpp
App/Applied/Primitives/Vector2D/: vector_2d.hpp
App/Applied/Primitives/Vector3D/: vector_3d.hpp
App/Applied/Primitives/Vector4D/: vector_4d.hpp
App/Applied/SPH/common/: common_defs.h
App/Applied/Scene/: scene.cpp  scene.h
App/Applied/SceneObjects/: base_object.h  camera.h  composite.cpp  composite.h  invisible_object.h  light.h  visible_object.h
App/Applied/SceneObjects/Model/: model.h  polygonal_model.c++  polygonal_model.h  polygonal_model_components.cpp  polygonal_model_components.h  wireframe_model.cpp  wireframe_model.h  wireframe_model_components.cpp  wireframe_model_components.h
App/Applied/SceneObjects/ParticleSystem/: particle.h  particle_system.cpp  particle_system.h
App/Applied/Solutions/: load_director_solution.cpp  load_director_solution.h
App/Applied/Visitors/: base_draw_visitor.h  base_transform_visitor.h  draw_visitor.cpp  draw_visitor.h  transform_visitor.cpp  transform_visitor.h
App/Ui/Qt/: custom_graphics_view.c++  custom_graphics_view.h  mainwindow.c++  mainwindow.h  mainwindow.ui
App/Ui/Qt/Drawer/: qt_drawer.cpp  qt_drawer.h  qt_drawer_factory.cpp  qt_drawer_factory.h  thread.h
App/Workers/: gui_worker.cpp  gui_worker.h  main_worker.cpp  main_worker.h  sim_worker.h
Data/Models/Polygonal/Triangulated/: s_57.mtl
Domains/: main.cpp
Domains/Applied/: constants.h  global_types.h  utils.h
Domains/Applied/Color/: color.h
Domains/Applied/Commands/: base_command.h
Domains/Applied/Commands/CameraCommands/: add_camera_command.cpp  add_camera_command.h  camera_command.h  count_cameras_command.cpp  count_cameras_command.h  load_camera_command.cpp  load_camera_command.h  move_camera_command.cpp  move_camera_command.h  remove_camera_command.cpp  remove_camera_command.h  rotate_camera_command.h  set_cur_camera_command.cpp  set_cur_camera_command.h
Domains/Applied/Commands/LightCommands/: add_light_command.hpp
Domains/Applied/Commands/ModelCommands/: add_model_command.cpp  add_model_command.h  count_models_command.cpp  count_models_command.h  load_model_command.h  load_polygonal_model_command.cpp  load_polygonal_model_command.h  model_command.h  move_model_command.cpp  move_model_command.h  remove_model_command.cpp  remove_model_command.h  rotate_model_command.cpp  rotate_model_command.h  scale_model_command.cpp  scale_model_command.h  transform_model_command.cpp  transform_model_command.h
Domains/Applied/Commands/ParticleSystemCommands/: add_particle_system_command.hpp  remove_particle_system_command.hpp
Domains/Applied/Commands/SceneCommands/: draw_scene_command.cpp  (+8 more)
Domains/Applied/Drawer/: drawer.h  solution_drawer_factory.cpp  solution_drawer_factory.h
Domains/Applied/Exceptions/: base_exception.h  camera_exceptions.h  load_exceptions.h  model_exceptions.h
Domains/Applied/Facade/: facade.h
Domains/Applied/Image/: image.h
Domains/Applied/Managers/: base_manager.h  draw_manager.cpp  draw_manager.h  load_manager.cpp  load_manager.h  main_manager.cpp  manager_creator.h  scene_manager.cpp  scene_manager.h  transform_manager.cpp  transform_manager.h
Domains/Applied/Scene/: scene.cpp  scene.h
Domains/Applied/SceneObjects/: base_object.h  camera.h  composite.cpp  composite.h  invisible_object.h  light.h  visible_object.h
Domains/Applied/Solutions/: load_director_solution.cpp  load_director_solution.h
Domains/Applied/Visitors/: base_draw_visitor.h  base_transform_visitor.h  draw_visitor.cpp  draw_visitor.h  transform_visitor.cpp  transform_visitor.h
Domains/Ui/Qt/: custom_graphics_view.c++  custom_graphics_view.h  main_window.c++  main_window.h  main_window.ui
(+86 files in other folders)
